--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.squareup.okhttp3:okhttp:3.5.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 
 
 
